--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -123,7 +123,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url('assets/img/colegio-1.png');
+    background-image: url('../../assets/img/colegio-1.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
