--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 }
 
 body {
-  margin: 0;
+  margin: 0 auto;
   font-family: 'Poppins', sans-serif;
   color: var(--text-color);
   background-color: #fff;
