--- a/src/components/header/styles.scss
+++ b/src/components/header/styles.scss
@@ -1,9 +1,7 @@
 /* 1. Barra Superior */
-.cabecera-seccion {
+.cabecera{
     background: linear-gradient(135deg, var(--primary-color) 0%, #1a2980 100%);
     padding: 15px 5%;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
     font-size: 1em;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
@@ -11,8 +9,13 @@
     top: 0;
     z-index: 1000;
 }
+.cabecera-contenido{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
 
-.cabecera-seccion a {
+.cabecera a {
     color: white;
     text-decoration: none;
     display: inline-flex;
@@ -44,7 +47,7 @@
     }
 }
 
-.cabecera-seccion a h1 {
+.cabecera a h1 {
     margin: 0;
     font-size: 2em;
     font-weight: 800;
@@ -111,7 +114,7 @@
 .contenido-seccion {
     position: relative;
     color: white;
-    height: 55vh;
+    height: 45vh;
     display: flex;
     align-items: flex-end;
     overflow: hidden;
